- fix, not showing the player 2 score in the game menu - improve the readme, with a better description of the game - add a different color for the value elements in the game menu (timer/number of tails)

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ em
     color: antiquewhite;
     }
 
+.displayValue
+    {
+    color: chartreuse;
+    }
 
     /* Main Menus */
 
@@ -136,7 +140,6 @@ figure
 #GameMenu-left > *
     {
     display: inline-block;
-    width: 90px;
     padding: 0;
     margin: 10px 0;
     }
@@ -147,9 +150,4 @@ figure
     width: 120px;
     padding: 0;
     margin: 10px 10px;
-    }
-
-#GameMenu-player2-score
-    {
-    display: none;
     }
